# aralia-mcp

./: .dockerignore  .env.sample  .gitignore  LICENSE  README.md  aralia_agent_logic.py  aralia_mcp_server.py  aralia_mcp_server_sdk.py  config.py  debug.txt  demo1_mcp_rag.py  graph_test.py  main.py  main_test.py  mcp_anthropic_utils.py  pyproject.toml  requirements.txt  server.py
aralia_mcp/: aralia_agent_logic.py  aralia_mcp_server_sdk.py  mcp_anthropic_utils.py  pyproject.toml
graphs/: __init__.py  aralia_tools.py  graph.py  node.py  prompts.py  schema.py  state.py
mcp_src/: aralia_tools.py  prompts.py
uv/: .dockerignore  .env.sample  .gitignore  config.py  main.py  main_test.py  requirements.txt
uv/graphs/: __init__.py  aralia_tools.py  graph.py  node.py  prompts.py  schema.py  state.py
