[project]
name = "mcp-server-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"        
requires-python = ">=3.11"
dependencies = [
    "config>=0.5.1",
    "dotenv>=0.9.9",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.5",
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "typing>=3.10.0.0",
    "typing-extensions>=4.13.2",
]
